# digitalMenu

./: README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py  schemas.py  utils.py
backend/app/compositions/: models.py  router.py  schemas.py  service.py
backend/app/products/: models.py  router.py  schemas.py  service.py
backend/app/settings/: router.py
backend/app/tags/: models.py  router.py  schemas.py  service.py
backend/app/users/: models.py  router.py  schemas.py  service.py  utils.py
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/app/Constants/: RoutingConstants.ts
frontend/src/app/Http/: index.ts
frontend/src/app/Routes/: Routing.tsx  appRoutes.ts
frontend/src/app/Store/: index.ts
frontend/src/app/Types/: composition.type.ts  product.type.ts  tag.type.ts  user.type.ts
frontend/src/app/hooks/: useAppDispatch.ts  useAppSelector.ts  useGetUser.ts
frontend/src/app/http/: index.ts
frontend/src/app/services/: UserService.ts  useGetProductById.ts  useGetProducts.ts  useGetTags.ts  useGetUser.ts  usePostComposition.ts
frontend/src/entities/CardCollection/: CardCollection.module.scss  CardCollection.tsx
frontend/src/entities/CardComposition/: CardComposition.module.css  (+3 more)
src/: App.tsx
src/app/Constants/: RoutingConstants.ts
src/pages/Collection/: Collection.tsx
src/widgets/Header/: Header.tsx
(+56 files in other folders)
